дз9урок15 исправлено